Fix Long Person type profile field spills out of input box

--- a/static/styles/input_pill.css
+++ b/static/styles/input_pill.css
@@ -37,7 +37,10 @@
         }
 
         .pill-value {
-            margin: 0 5px;
+            white-space: nowrap;
+            width: 50px;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .exit {
